--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding-bottom: 9%;
   margin-left: -8;
   margin-right: -8;
+  font-family: Josefin sans;
 }
 .home-page .header {
   display: flex;
@@ -11,18 +12,20 @@
   justify-content: space-between;
   background-color: #fc7a23;
   margin: -8;
-  font-family: Josefin sans;
   font-weight: bold;
-  padding: 16;
+  padding: 16 50;
+  height: 30px;
 }
 .home-page .header a {
   text-decoration: none;
   color: black;
 }
 .home-page .header #header-title {
-  font-family: Josefin sans;
-  font-size: 30;
-  margin-left: 75;
+  font-size: 25;
+  margin-left: 20;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 .home-page .header .header-nav {
   display: inline-flex;
@@ -37,16 +40,16 @@
   cursor: pointer;
 }
 .home-page #home-title {
-  font-size: 63;
-  font-family: Josefin sans;
+  font-size: clamp(25px, 3vw, 60px);
   text-align: left;
   margin: 0 175;
 }
 .home-page .home-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: none;
-  align-items: start;
+  flex-wrap: wrap-reverse;
+  align-items: flex-end;
+  justify-content: center;
 }
 .home-page .home-container .home-sub-container #home-register button {
   font-size: 24;
@@ -63,18 +66,32 @@
   font-style: italic;
   text-align: left;
   line-height: 1.25;
+  width: 400;
 }
 .home-page .home-container .home-image {
-  transform: scale(0.6);
-  margin-bottom: -100;
-  margin-top: -150;
-  margin-left: 180;
+  margin-right: 70;
 }
 
-.HindiLetter {
-  height: 500;
+@media screen and not (min-width: 400px) {
+  #home-title {
+    background-color: #482300;
+    text-align: center;
+    margin-bottom: 95px !important;
+    font-size: 45px;
+  }
+  #home-register {
+    text-align: center;
+  }
+  #home-subtext {
+    text-align: center;
+  }
+  .home-sub-container {
+    margin-bottom: 125px !important;
+  }
+  .home-page {
+    padding-bottom: 425px;
+  }
 }
-
 .page {
   font-family: Josefin sans;
   padding: 55 175;
@@ -93,21 +110,27 @@
 
 .about-group {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
 .about-group #about-description {
-  width: 53%;
+  width: 57%;
   font-size: 23;
   font-weight: 450;
   word-spacing: 1.5;
   line-height: 1.3;
 }
 .about-group .about-img {
-  width: 500px;
+  width: 375px;
+  margin-left: 50;
   border-radius: 8px;
 }
 
+@media screen and not (min-width: 400px) {
+  .about-img {
+    display: none;
+  }
+}
 #hearfromothers-page {
   background-color: #fff6e9;
 }
@@ -209,8 +232,8 @@ video.displaySlide {
   transform: scale(1.02);
 }
 
-#header-title:hover {
-  text-decoration: underline;
+#header-title a:hover {
+  transform: scale(1.02);
 }
 
 #home-register button:hover {
