--- a/style.scss
+++ b/style.scss
@@ -5,9 +5,9 @@ $font-family: Josefin sans;
 $color1: #fc7a23;
 $color2: #fff6e9;
 $color3: #000f48;
-// $color4: #cee741;
+$color4: #cee741;
 
-$color4: #004830;
+// $color4: #004830;
 
 //Home Page
 .home-page {
@@ -18,6 +18,7 @@ $color4: #004830;
     margin-left: -8;
     margin-right: -8;
 
+    font-family: $font-family;
     .header
     {
         display: flex;
@@ -26,19 +27,24 @@ $color4: #004830;
 
         background-color: $color1;
         margin: -8;
-        
-        font-family: $font-family;
+    
         font-weight: bold;
         
-        padding: 16;
+        padding: 16 50;
 
         a {text-decoration: none; color: black;}
 
+        height: 30px;
         #header-title
         {
-            font-family: $font-family;
-            font-size: 30;
-            margin-left: 75;
+            font-size: 25;
+            margin-left: 20;
+
+            display: flex;
+            align-items: center;
+
+            cursor: pointer;
+            
         }
 
         .header-nav
@@ -63,25 +69,25 @@ $color4: #004830;
 
     #home-title
     {
-        font-size: 63;
-        font-family: $font-family;
+        font-size: clamp(25px, 3vw, 60px);
         text-align:left;
         margin: 0 175;
-        // margin-bottom: -25;
     }
 
     .home-container
     {
         display: flex;
         flex-direction: row;
-        flex-wrap: none;
+        flex-wrap: wrap-reverse;
 
-        align-items:start;
-        // justify-content: center;
+        align-items: flex-end;
+        justify-content: center;
+
+        // background-color: #000f48;
 
         .home-sub-container
         {
-            // background-color: #000f48;
+            // background-color: #48002e;
             #home-register
             {
                 // background-color: #000f48;
@@ -109,6 +115,8 @@ $color4: #004830;
                 font-style: italic;
                 text-align: left;
                 line-height: 1.25;
+
+                width: 400;
                 
 
             }
@@ -116,24 +124,47 @@ $color4: #004830;
     
         .home-image
         {
-            // background-color: #000f48;
-            transform: scale(0.6);
-            margin-bottom: -100;
-            margin-top: -150;
-            margin-left: 180;
+            margin-right: 70;
         }
     }
 }
 
-// Hindi Letter General Style
-
-.HindiLetter
+@media screen and not (min-width: 400px) // its an phone
 {
-    height: 500;
+    #home-title
+    {   
+        background-color: #482300;
+        text-align: center;
+        margin-bottom: 95px !important;
+        font-size: 45px;
+        
+    }
+
+    #home-register
+    {
+        text-align: center;
+    }
+    #home-subtext
+    {
+        text-align: center;
+    }
     
+    .home-sub-container
+    {
+        margin-bottom: 125px !important;
+    }
+    .home-page
+    {
+        padding-bottom: 425px;
+    }
+
+    #home-image
+    {
+        // transform: scale(0.2) !important;
+    }
+
+
 }
-
-
 // General Styles
 .page
 {
@@ -162,12 +193,12 @@ $color4: #004830;
 .about-group
 {
     display: flex;
-    justify-content: space-between;
-    align-items:center;
+    justify-content: space-evenly;
+    align-items:flex-start;
 
     #about-description
     {
-        width: 53%;
+        width: 57%;
 
         font-size: 23;
         font-weight: 450;
@@ -178,15 +209,22 @@ $color4: #004830;
     
     .about-img
     {
-        width: 500px;
+        width: 375px;
         // margin-bottom: 150px;
-
+        margin-left: 50;
         border-radius: 8px;
     }
 
     
 }
 
+@media screen and not (min-width: 400px) 
+{
+    .about-img
+    {
+        display: none;
+    }
+}
 // Hear from others
 
 #hearfromothers-page
@@ -357,9 +395,13 @@ video.displaySlide
     transform: scale(1.02);
 }
 
-#header-title:hover
+#header-title
 {
-   text-decoration: underline;
+    a:hover
+    {
+        transform: scale(1.02);
+
+    }
 }
 
 #home-register
