--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@
     font-size: 15px !important;
   }
   #home-title {
+    background-color: #000f48 !important;
     font-size: 20 !important;
     padding: 0 20;
   }
