--- a/style.scss
+++ b/style.scss
@@ -210,7 +210,7 @@ $color4: #cee741;
 
     #home-title
     {
-        // background-color: #000f48 !important;
+        background-color: #000f48 !important;
         font-size: 20 !important;
 
         padding: 0 20;
