--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@
     font-size: 15px !important;
   }
   #home-title {
-    background-color: #000f48 !important;
     font-size: 20 !important;
     padding: 0 20;
   }
@@ -141,20 +140,16 @@
     font-size: 15 !important;
   }
 }
-.about-group {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-start;
-}
-.about-group #about-description {
-  width: 57%;
+#about-group {
   font-size: 23;
   font-weight: 450;
   word-spacing: 1.5;
   line-height: 1.3;
 }
-.about-group .about-img {
+
+.about-img {
   width: 375px;
+  float: right;
   margin-left: 50;
   border-radius: 8px;
 }
@@ -171,7 +166,6 @@
 #comments {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: baseline;
   justify-content: center;
 }
