--- a/style.scss
+++ b/style.scss
@@ -210,7 +210,7 @@ $color4: #cee741;
 
     #home-title
     {
-        background-color: #000f48 !important;
+        // background-color: #000f48 !important;
         font-size: 20 !important;
 
         padding: 0 20;
@@ -249,32 +249,23 @@ $color4: #cee741;
 
 
 // About Page
-.about-group
+
+#about-group
 {
-    display: flex;
-    justify-content: space-evenly;
-    align-items:flex-start;
-
-    #about-description
-    {
-        width: 57%;
-
-        font-size: 23;
-        font-weight: 450;
-        
-        word-spacing: 1.5;
-        line-height: 1.3;
-    }
+    font-size: 23;
+    font-weight: 450;
     
-    .about-img
-    {
-        width: 375px;
-        // margin-bottom: 150px;
-        margin-left: 50;
-        border-radius: 8px;
-    }
+    word-spacing: 1.5;
+    line-height: 1.3;
+    // text-align: justify;
+}
 
-    
+.about-img
+{
+    width: 375px;
+    float: right;
+    margin-left: 50;
+    border-radius: 8px;
 }
 
 // Hear from others
@@ -294,7 +285,6 @@ $color4: #cee741;
 {
     display: flex;
     flex-direction: row;
-    flex-wrap:wrap;
     align-items: baseline;
 
     justify-content: center;
