--- a/style.scss
+++ b/style.scss
@@ -265,6 +265,7 @@ $color4: #cee741;
     width: 375px;
     float: right;
     margin-left: 50;
+    margin-bottom: 50;
     border-radius: 8px;
 }
 
