--- a/style.css
+++ b/style.css
@@ -150,8 +150,8 @@
 .about-img {
   width: 375px;
   float: right;
-  margin-left: 50;
-  margin-bottom: 50;
+  margin-left: 50px;
+  margin-bottom: 25px;
   border-radius: 8px;
 }
 
