--- a/style.scss
+++ b/style.scss
@@ -264,8 +264,8 @@ $color4: #cee741;
 {
     width: 375px;
     float: right;
-    margin-left: 50;
-    margin-bottom: 50;
+    margin-left: 50px;
+    margin-bottom: 25px;
     border-radius: 8px;
 }
 
