--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 .page {
   font-family: Josefin sans;
-  padding: 55 75;
+  padding: 2.5% 10%;
   margin-left: -8;
   margin-right: -8;
   background-color: #fc7a23;
@@ -75,6 +75,7 @@
   color: white;
   padding: 20 35;
   cursor: pointer;
+  transition: all 0.5s ease;
 }
 .home-page .home-container .home-sub-container #home-subtext {
   font-size: 22;
@@ -86,6 +87,10 @@
 }
 .home-page .home-container .home-image {
   margin-right: 70;
+}
+
+#home-register button:hover {
+  transform: scale(1.1);
 }
 
 @media screen and not (min-width: 900px) {
@@ -177,6 +182,7 @@
   padding: 12 25;
   margin: 20 30;
   font-size: 22;
+  transition: all 0.5s ease;
 }
 #comments .comment .comment-text {
   line-height: 1.3;
@@ -197,41 +203,27 @@
   cursor: pointer;
 }
 
+.comment:hover {
+  transform: scale(1.08);
+}
+
+.comment-closing button:hover {
+  opacity: 0.5;
+}
+
 #example-page {
   background-color: #cee741;
 }
-
-.slider {
-  position: relative;
-  width: 90%;
-  margin: auto;
-  overflow: hidden;
-  aspect-ratio: 16/9;
+#example-page .video {
+  text-align: center;
 }
-.slider video {
-  width: 100%;
-  display: none;
+#example-page .video video {
   border-radius: 8px;
-}
-.slider button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 25px;
-  padding: 10 15;
-  border: none;
-  cursor: pointer;
-  opacity: 0.6;
-}
-.slider .prev {
-  left: 0;
-}
-.slider .next {
-  right: 0;
+  transition: all 0.3s ease;
 }
 
-video.displaySlide {
-  display: block;
+.video video:hover {
+  transform: scale(1.01);
 }
 
 #contact-page {
@@ -256,32 +248,5 @@ video.displaySlide {
 }
 .contact-container .contact-info {
   margin: 0 150;
-}
-.header-nav-link:hover {
-  transform: scale(1.02);
-}
-
-#header-title a:hover {
-  transform: scale(1.02);
-}
-
-#home-register button:hover {
-  transform: scale(1.01);
-  box-shadow: 2px 2px black;
-  background-color: #0a0a6a;
-}
-
-.comment-closing button:hover {
-  color: #000f48;
-}
-
-.comment:hover {
-  transform: scale(1.01);
-  box-shadow: 7px 7px #000f48;
-  cursor: pointer;
-}
-
-.about-img:hover {
-  box-shadow: 7px 7px #000f48;
-  cursor: pointer;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
