--- a/style.scss
+++ b/style.scss
@@ -11,12 +11,13 @@ $color4: #cee741;
 
 
 
-// General Styles
+// ------------General Styles------------
 .page
 {
     font-family: $font-family;
     
-    padding: 55 75;
+    // padding: 55 75;
+    padding: 2.5% 10%;
     margin-left: -8;
     margin-right: -8;
     
@@ -35,8 +36,7 @@ $color4: #cee741;
     }
 }
 
-
-//Home Page
+// ---------------Home Page---------------
 .home-page {
     
     background-color: $color2;
@@ -71,7 +71,6 @@ $color4: #cee741;
             align-items: center;
 
             cursor: pointer;
-            
         }
 
         .header-nav
@@ -88,10 +87,8 @@ $color4: #cee741;
                 font-size: 18;
                 margin-left: 50; margin-right: 50;
                 cursor: pointer;
-                
             }
         }
-        
     }
 
     #home-title
@@ -132,6 +129,8 @@ $color4: #cee741;
                     padding: 20 35;
 
                     cursor: pointer;
+
+                    transition: all .5s ease;
                 }
             }
 
@@ -144,16 +143,21 @@ $color4: #cee741;
                 line-height: 1.25;
 
                 width: 400;
-                
-
             }
         }
     
         .home-image
         {
-            // background-color: #000f48;
             margin-right: 70;
         }
+    }
+}
+
+#home-register
+{
+    button:hover
+    {
+        transform: scale(1.1);  
     }
 }
 
@@ -248,7 +252,7 @@ $color4: #cee741;
 }
 
 
-// About Page
+// ------------About Page------------
 
 #about-group
 {
@@ -269,7 +273,7 @@ $color4: #cee741;
     border-radius: 8px;
 }
 
-// Hear from others
+// ----------Hear from others----------
 
 #hearfromothers-page
 {
@@ -280,8 +284,8 @@ $color4: #cee741;
 #hear-heading
 {
     padding-left: 80;
-    // background-color: #000f48;
 }
+
 #comments
 {
     display: flex;
@@ -291,10 +295,6 @@ $color4: #cee741;
 
     justify-content: center;
 
-    // background-color: #004804;
-
-    
-   
     .comment
     {
         width: 400px;
@@ -305,6 +305,8 @@ $color4: #cee741;
         margin: 20 30;
 
         font-size: 22;
+
+        transition: all .5s ease;
 
         .comment-text
         {
@@ -329,73 +331,48 @@ $color4: #cee741;
                 border-style: none;
                 cursor: pointer;
             }
-
-
         }
     }
 }
 
+.comment:hover
+{
+    transform: scale(1.08);
+}
 
-// Example Classes
+.comment-closing
+{
+    button:hover
+    {
+       opacity: .5;
+    }
+}
+
+// -------Example Classes------------
 
 #example-page
 {
     background-color: $color4;
+
+    .video
+    {
+        text-align: center;
+
+        video { border-radius: 8px; transition: all .3s ease; }
+    }
+    
 }
 
-.slider
+.video 
 {
-    position: relative;
-    width: 90%;
-    margin: auto;
-    overflow: hidden;
-    aspect-ratio: 16/9;
-
-    video
+    video:hover
     {
-        width: 100%;
-        display: none;
-        border-radius: 8px;
-    }
-
-    button
-    {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 25px;
-        // background-color;
-        padding: 10 15;
-        border: none;
-        cursor: pointer;
-        opacity: .6;
-    }
-
-    .prev
-    {
-        left: 0;
-    }
-
-    .next
-    {
-        right: 0;
+        transform: scale(1.01);
+        // box-shadow: 1.5px 1.5px 20px rgb(103, 101, 101);
     }
 }
 
-video.displaySlide
-{
-    display: block;
-    // animation-name: fade;
-    // animation-duration: 5;
-}
-
-
-// @keyframes fade {
-//     from {opacity: .2;}
-//     to {opacity: 1;}
-// }
-
-// Contact
+// ---------Contact---------
 
 #contact-page
 {
@@ -430,57 +407,6 @@ video.displaySlide
     .contact-info
     {
         margin: 0 150;
-
-    }
-    
-    .logo
-    {
-    
+        text-align: center;
     }
 }
-
-
-// animations
-
-.header-nav-link:hover
-{
-    transform: scale(1.02);
-}
-
-#header-title
-{
-    a:hover
-    {
-        transform: scale(1.02);
-
-    }
-}
-
-#home-register
-{
-    button:hover
-    {
-        transform: scale(1.01);
-        box-shadow: 2px 2px black;
-        background-color:#0a0a6a;
-    }
-}
-
-.comment-closing
-{
-    button:hover { color:#000f48; }
-}
-
-.comment:hover
-{
-    transform: scale(1.01);
-    box-shadow: 7px 7px $color3;
-    cursor: pointer;
-}
-
-.about-img:hover
-{
-    box-shadow: 7px 7px $color3;
-    cursor: pointer;
-}
-
