--- a/style.scss
+++ b/style.scss
@@ -372,6 +372,12 @@ $color4: #cee741;
     }
 }
 
+// ------Resources Page------
+
+.link
+{
+    text-align: center;
+}
 // ---------Contact---------
 
 #contact-page
